argocd/empty.yaml
# dummy placeholder so Kustomize doesn't complain about missing base
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
