argocd/repo-server-pvc-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: argocd1
spec:
  template:
    spec:
      volumes:
        - name: repo-volume
          persistentVolumeClaim:
            claimName: argocd-pvc
      containers:
        - name: argocd-repo-server
          volumeMounts:
            - name: repo-volume
              mountPath: /tmp
