argocd/argocd-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`console.somehostname.local`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
  tls:
    certResolver: le
