argocd/argocd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`console.somehostname.local`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    certResolver: le
